--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: tfenrichr
 Title: Enrichment tests for transcription factor binding sites.
-Version: 0.0.1
+Version: 0.0.3
 Authors@R: 
     person(given = "Keira",
            family = "Wiechecki",
@@ -14,12 +14,13 @@ LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
 Depends: 
-    R (>= 3.3)
+    R (>= 3.3),
+    motifmatchr
 Imports:
     Biostrings,
     GenomicRanges,
-    motifmatchr,
     SummarizedExperiment,
+    TFMPvalue,
     TFBSTools
 Recommends: CrobustaTFs
 LinkingTo: Rcpp, RcppArmadillo
