--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,7 +8,7 @@ Authors@R:
            email = "kaw504@nyu.edu",
            comment = c(ORCID = "0000-0003-0572-6284"))
 Description: A package for computing enrichment statistics from motifmatchr results.
-License: `use_gpl3_license()`
+License: `use_mit_license()`
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
